# agentshaus

./: .gitignore  AGENTS.md  agents-haus-architecture.mmd  package.json  pnpm-lock.yaml  turbo.json
app/: .env.local.example  .vade-report  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
app/scripts/: AGENT_AUTOMATION.md  agent-cron.mjs  agent-scheduler.mjs  mainnet-smoke.mjs
app/src/app/: layout.tsx  page.tsx
app/src/components/: activity-log.tsx  agent-card.tsx  agent-chat.tsx  agent-config.tsx  agent-stats.tsx  animated-skill-lines.tsx  create-agent-form.tsx  discover-card.tsx  epoch-status.tsx  fund-withdraw.tsx  header.tsx  providers.tsx  sidebar.tsx  skills-catalog.tsx  theme-provider.tsx  wallet-button.tsx  workspace-placeholder.tsx
app/src/hooks/: use-agent-state.ts  use-agent-transactions.ts  use-send-transaction.ts  use-solana-rpc.ts
app/src/lib/: agent-ownership-auth.ts  chat-usage.ts  credits.ts  export-keypair.ts  fly-machines.ts  privy-auth.ts  runtime-provider.ts  solana-wallet-preference.ts  themes.ts  (+2 more)
programs/agents-haus/: Anchor.toml  Cargo.toml
programs/agents-haus/programs/agents-haus/: Cargo.toml
programs/agents-haus/programs/agents-haus/src/: auth.rs  constants.rs  errors.rs  lib.rs
programs/agents-haus/programs/agents-haus/src/instructions/: agent_burn.rs  agent_tip.rs  claim_rewards.rs  create_agent.rs  fund_agent.rs  mod.rs  update_agent_config.rs  update_executor.rs  withdraw_from_agent.rs
programs/agents-haus/programs/agents-haus/src/state/: agent_state.rs  mod.rs
scripts/: seed-scouts.ts
(+33 files in other folders)
