[package]
name = "agents-haus"
version = "0.1.0"
description = "Autonomous AI agent management on Solana — Soul NFT minting, agent wallet PDAs, and alpha.haus CPI"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agents_haus"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
mpl-core = { workspace = true }
